# serde_fmt

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
ci/: nightly.sh  thumbv6m.sh
src/: lib.rs
