[package]
name = "serde_fmt"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"

[features]
default = ["std"]

# Support the standard library
std = ["serde/std"]

[dependencies.serde]
version = "1"
default-features = false

[dev-dependencies.serde_derive]
version = "1"
